# ipmi-fru-parser

./: .clang-tidy  .gitignore  CMakeLists.txt  MAINTAINERS  Makefile  Makefile.am  OWNERS  README.md  argument.C  argument.cpp  argument.hpp  configure.ac  fru-area.H  fru-area.hpp  fru_area.cpp  fru_area.hpp  frup.c  frup.cpp  frup.h  frup.hpp  groups  meson.build  meson_options.txt  multirecord.cpp  multirecord.hpp  project.config  readeeprom.C  readeeprom.cpp  strgfnhandler.C  strgfnhandler.cpp  types.hpp  writefrudata.C  writefrudata.H  writefrudata.cpp  writefrudata.hpp
cmake/: sdbus.cmake
scripts/: .clang-tidy  barreleye_bmc_fru.yaml  example.yaml  extra-properties-example.yaml  extra-properties.mako.cpp  extra-properties.py  fru-types.yaml  fru_gen.hpp  fru_gen.py  gen_pimrules.py  inventory-gen.cpp  inventory-gen.hpp  inventory-gen.yaml  inventory.py  inventory_mrw.yaml  palmetto.yaml  parser.pl  writefru.mako.cpp  writefru.mako.hpp
test/: Makefile.am  test_writefrudata.cpp
